# dad-decentralized_library

./: .gitignore  README.md
client/: .env  README.md  index.html  package.json  tsconfig.json
client/src/: App.tsx
client/src/app/services/: contracts.ts  queries.ts  wallet.ts
client/src/app/utils/: constants.ts
client/src/components/: InjectiveWelcome.tsx  ProtectedRoute.tsx
client/src/components/App/: Button.tsx  WalletConnect.tsx
client/src/components/BookCard/: index.tsx
client/src/components/Navbar/: index.tsx
client/src/pages/: AddBookPage.tsx  AvailableBooksPage.tsx  BorrowedBooksPage.tsx  HomePage.tsx
client/src/store/: wallet.ts
mock/: book_1.txt  book_10.txt  book_2.txt  book_3.txt  book_4.txt  book_5.txt  book_6.txt  book_7.txt  book_8.txt  book_9.txt  books.json  upload_books.sh
smart-contract/: Cargo.toml  README.md  build_and_deploy.sh  build_and_test.sh  contract_config.sh  contract_utils.sh  install.sh  redeploy_contract.sh  test_contract.sh  update_contract.sh
smart-contract/src/: error.rs  lib.rs  msg.rs  state.rs
