[package]
name          = "cw721-metadata-onchain"
description   = "An opionated `cw721-base` explicitly defining `NftExtension` for metadata on chain"
authors       = [
  "mr-t <mr-t@arkprotocol.io>",
  "Ethan Frey <ethanfrey@users.noreply.github.com>",
  "Orkun Külçe <orkun@deuslabs.fi>",
]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/CosmWasm/cw-nfts"
homepage      = "https://github.com/CosmWasm/cw-nfts"
documentation = "https://docs.rs/cw721-metadata-onchain"
rust-version  = "1.60.0"

[lib]
doctest      = false # disable doc tests
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.4.1"
cosmwasm-std    = "1.4.1"
cw2             = "1.1.1"
cw721           = "0.17.0"
schemars        = "0.8.12"
serde           = { version = "1.0", features = ["derive"] }
cw-storage-plus = "1.1.1"
thiserror = "1.0.50"